change Long to Integer